--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 outputField.textContent = processString(inputField.value); // Update text content dynamically
             });
 
-            inputField.value = "[az]+(b)+[c-f]*(d(eee)?fff)*[g]?(h)(?:a)x(?!c)d(?=b)";
+            inputField.value = "[az]+[af-pw](b)+[c-f]*(d(eee)?fff)*[g]?(h)(?:a)x(?!c)d(?=b)";
             outputField.textContent = processString(inputField.value)
         })
     </script>
