--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             });
 
             inputField.value = "x*.[az]+[af-pw](b)+[c-f]*(d(eee)?fff)*[g]?(h)(?:a)x(?!c)d(?=b)";
-            inputField.value = "\\ \\w\\d\\s";
+            inputField.value = "x\\ (\\(\\w\\d)\\s\\W\\D\\S\\\\ sdfds";
             outputField.textContent = processString(inputField.value)
         })
     </script>
